imperative-tests/tests/invalid_enums/var_name_longer_one.stderr
error: Variables names must be one symbol long
 --> $DIR/var_name_longer_one.rs:5:7
  |
5 |     A{vw:u8},
  |       ^^

error: Instruction contains invalid variable names. See above.
 --> $DIR/var_name_longer_one.rs:5:7
  |
5 |     A{vw:u8},
  |       ^^
